# BevyLearning

./: .gitignore  CHAT_EXPORT.md  Cargo.toml  PATCH_NOTES.md  README.md  human_ergo_preset.cfg  rust-toolchain.toml
.cargo/: config.toml
.github/agents/: refactor-guard.agent.md
scripts/: release.sh
src/: auth.rs  auth_codec.rs  bitstream.rs  config.rs  connection.rs  controls.rs  doom_wad.rs  fps.rs  huffman.rs  lib.rs  main.rs  multiplayer.rs  packet.rs  player.rs  remote_runtime.rs  scene.rs  server_tick.rs  skybox.rs  steam_mp.rs  sync_codec.rs  ui.rs
src/client/: mod.rs  state_sync.rs
src/protocol/: a2s.rs  gameinfo.rs  mod.rs  query.rs
src/server/: mod.rs  session.rs
wads/unloved/: unloved readme.txt  unloved.txt
