[package]
name = "learning"
version = "0.3.2"
edition = "2024"

[features]
default = ["steamworks"]
steamworks = ["dep:steamworks"]

[dependencies]
bevy = { version = "0.19", features = ["bevy_dev_tools"] }
steamworks = { version = "0.11", optional = true }
zip = { version = "2.2", default-features = true }
